--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,14 @@ header {
     height: 100px;
 }
 
+header img {
+    position: absolute;
+    top: 40px;
+    right: 50px;
+    height: 50px;
+    width: 50px;
+}
+
 h1 {
     width: 75%;
     text-align: center;
@@ -28,6 +36,7 @@ header p {
     padding: 0;
     margin: 21px 0 0 150px;
     font-size: 50px;
+    width: 750px;
 }
 
 header a {
