--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 :root {
-    --background: #AFBEC5
+    --background: #AFBEC5;
+    --html: white
 }
-
+html {
+    background-color: var(--html);
+}
 header {
     background-color: var(--background);
     border-radius: 15px;
@@ -27,7 +30,7 @@ h1 {
     border-radius: 15px;
     border: 4px solid black;
     padding-top: 5px;
-    background-color: rgb(212, 250, 255);
+    background-color: var(--html);
     font-size: 25px;
     text-decoration: none;
 }
