--- a/styles.css
+++ b/styles.css
@@ -384,6 +384,8 @@ html[id=me] {
             width: 47%;
             padding: 10px;
             font-size: 30px;
+            margin: 10px;
+            margin-top: 0;
         }
 
         img {
@@ -392,6 +394,8 @@ html[id=me] {
             border: 10px solid black;
             width: 47%;
             padding: 10px;
+            margin: 10px;
+            margin-top: 0;
         }
 
         @media only screen and (max-width: 620px) {
@@ -416,6 +420,9 @@ html[id=me] {
         border-top: 10px solid black;
         margin-top: 25px;
         padding: 5px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
 
         p {
             margin: 2.5px 10px 2.5px 10px;
