--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,14 @@ html[id=social] main {
             font-size: 25px;
             margin: 10px 0 10px 0;
         }
+
+        @media only screen and (max-width: 620px){
+            a p{
+                font-size: 20px;
+                line-height: 50px;
+                margin: 0;
+            }
+        }
     }
 }
 
