--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 /*voor alles*/
 :root {
     --background: #AFBEC5;
-    --html: "white"
+    --html: white;
 }
 
 html {
@@ -125,7 +125,7 @@ html[id=index] {
                 text-align: center;
                 font-size: larger;
             }
-
+ 
             h1 {
                 width: 75%;
                 text-align: center;
@@ -197,6 +197,18 @@ html[id=index] {
 
 /*projecten*/
 html[id=projecten] main {
+
+    .section_left,
+    .section_right {
+        display: flex;
+        width: 90%;
+        background-color: var(--background);
+        border: 10px solid black;
+        border-radius: 15px;
+        padding: 10px;
+        margin: 5%;
+    }
+
     p {
         margin: 0 5%;
         width: 70%;
@@ -206,6 +218,16 @@ html[id=projecten] main {
     img {
         width: 20%;
         margin-left: 10px;
+    }
+    @media only screen and (max-width: 620px){
+        width: 90%;
+        img{
+            display: none;
+        }
+        p{
+            width: auto;
+        }
+
     }
 }
 
@@ -280,8 +302,8 @@ html[id=social] main {
             margin: 10px 0 10px 0;
         }
 
-        @media only screen and (max-width: 620px){
-            a p{
+        @media only screen and (max-width: 620px) {
+            a p {
                 font-size: 20px;
                 line-height: 50px;
                 margin: 0;
@@ -462,9 +484,11 @@ html[id=inlog2] {
 
         @media only screen and (max-width: 620px) {
             height: auto;
-            p{
+
+            p {
                 font-size: 20px;
             }
+
             a {
                 margin-top: 50px;
                 margin-bottom: 25px;
