--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,10 @@ header {
             font-size: 20px;
             padding-left: 20px;
             height: 25px;
+            line-height:25px;
+        }
+        @media only screen and (max-width: 620px){
+            
         }
     }
 
