--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,7 @@ header {
             font-size: 20px;
             padding-left: 20px;
             height: 25px;
-            line-height:25px;
-        }
-        @media only screen and (max-width: 620px){
-            
+            line-height: 25px;
         }
     }
 
@@ -102,6 +99,14 @@ header {
             top: 30px;
             right: 30px;
         }
+    }
+
+    #countdown {
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        top: 25px;
+        left: 0;
     }
 }
 
