--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,8 @@ header {
     }
 
     #countdown {
-        width: 100%;
+        width: 50%;
+        margin: 0 25% 0 25%;
         text-align: center;
         position: absolute;
         top: 25px;
